--- a/com.cyt.music.common/pom.xml
+++ b/com.cyt.music.common/pom.xml
@@ -204,6 +204,23 @@
 		  <artifactId>jackson-mapper-asl</artifactId>
 		  <version>1.9.11</version>
 	  </dependency>
+
+	  <!--email-->
+	  <dependency>
+		  <groupId>javax.mail</groupId>
+		  <artifactId>mail</artifactId>
+		  <version>1.4.1</version>
+	  </dependency>
+	  <dependency>
+		  <groupId>com.icegreen</groupId>
+		  <artifactId>greenmail</artifactId>
+		  <version>1.3.1b</version>
+	  </dependency>
+	  <dependency>
+		  <groupId>javax.mail</groupId>
+		  <artifactId>mail</artifactId>
+		  <version>RELEASE</version>
+	  </dependency>
   </dependencies>
   <groupId>com.cyt.music</groupId>
 </project>
