--- a/com.cyt.music.common/pom.xml
+++ b/com.cyt.music.common/pom.xml
@@ -161,12 +161,29 @@
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.2.1</version>
 		</dependency>
+	  <dependency>
+		  <groupId>org.apache.httpcomponents</groupId>
+		  <artifactId>httpclient</artifactId>
+		  <version>4.5.3</version>
+	  </dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>1.4</version>
 		</dependency>
+	  <!-- https://mvnrepository.com/artifact/commons-lang/commons-lang -->
+	  <dependency>
+		  <groupId>commons-lang</groupId>
+		  <artifactId>commons-lang</artifactId>
+		  <version>2.6</version>
+	  </dependency>
 
+	  <dependency>
+		  <groupId>net.sf.json-lib</groupId>
+		  <artifactId>json-lib</artifactId>
+		  <version>2.2</version>
+		  <classifier>jdk15</classifier>
+	  </dependency>
 	  <!-- shiro -->
 	  <dependency>
 		  <groupId>org.apache.shiro</groupId>
