--- a/com.cyt.music.webapp/src/main/webapp/WEB-INF/classes/config/database.properties
+++ b/com.cyt.music.webapp/src/main/webapp/WEB-INF/classes/config/database.properties
@@ -3,8 +3,8 @@
 jdbc.driver=com.mysql.jdbc.Driver
 #jdbc.url=jdbc:mysql://localhost:3306:cyt_music
 #jdbc.url=jdbc:mysql://localhost:3306/cyt_music?useUnicode=true&characterEncoding=UTF-8
-jdbc.url=jdbc:mysql://116.62.139.94:3306/zzttravel?useUnicode=true&characterEncoding=UTF-8
-jdbc.password=123456
+jdbc.url=jdbc:mysql://47.91.77.217:3306/zzttravel?useUnicode=true&characterEncoding=UTF-8
+jdbc.password=jg9n3gkzeKisJV7
 jdbc.username=root
 #jdbc.username=scott
 jdbc.maxActive=500
